plugins {
    id 'java'
    id 'maven-publish'
}

group = 'ovh.sad'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.13.1'
    implementation "org.java-websocket:Java-WebSocket:1.6.0"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

publishing {
    repositories {
        maven {
            name = "sadovh"
            url = "https://repo.sad.ovh/releases"
            credentials(PasswordCredentials)
            authentication {
                basic(BasicAuthentication)
            }
        }
    }
    publications {
        maven(MavenPublication) {
            groupId = "ovh.sad"
            artifactId = "jkromer"
            version = "1.0"
            from components.java
        }
    }
}
